feat: enhance CORS support and SSL configuration in Docker and server
- Update Dockerfile to allow SSL keystore password to be set at runtime
- Modify server.js to implement CORS with allowed origins and improve security
- Add validation for handle and competition ID formats in API requests
- Refactor CORS filter to conditionally set headers based on allowed origins